# cuberover

./: .gitignore  .gitmodules  README.md  cr_init_setup.bash  restart_robot_services.bash  usbreset  usbreset.c
src/cr_bringup/launch/: all.launch
src/cr_control/: CMakeLists.txt  package.xml
src/cr_control/config/: control.yaml  hwin_settings.yaml  light_settings.yaml  wheel_hwin_settings.yaml
src/cr_control/doc/: gpio.md
src/cr_control/include/cr_control/: linear_actuator.h  roboclaw.h  wheel_hardware_interface.h
src/cr_control/include/cr_control/bno055/: BNO055.h
src/cr_control/launch/: cr_control.launch  cr_control_joy.launch  cr_control_rosbag_proxy.launch  cr_control_servo.launch  cr_control_vicon.launch  gps.launch  joy.launch  light.launch  servo.launch  vicon.launch
src/cr_control/msg/: trial_sample.msg  wheel_data.msg
src/cr_control/script/: arduino_commands.py  collect_data.py  gps.py  joy_controls.py
src/cr_control/src/: BNO055.cpp  light.cpp  linear_actuator.cpp  main.cpp  roboclaw.cpp  servo.cpp  simple_uart.c  simple_uart_term.c  stepper.cpp  test_imu.cpp  test_roboclaw.cpp  wheel_hardware_interface.cpp
src/cr_control/srv/: LightState.srv  ServoState.srv
src/cr_teleop/: package.xml
src/cr_teleop/launch/: cr_teleop_joystick.launch
src/gps/: package.xml
src/roboclaw_pkg/: CMakeLists.txt  package.xml
src/roboclaw_pkg/include/roboclaw_pkg/: roboclaw.hpp
src/roboclaw_pkg/src/: roboclaw.cpp  simple_uart.c  test_roboclaw.cpp
